# mage-rs

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  REFERENCE.md  test_edge_cases.mage  test_variables.mage
src/: cli.rs  execute.rs  flatify.rs  flatify_tests.rs  flatten.rs  flatten_tests.rs  general.rs  jit.rs  lib.rs  ls.rs  mage.rs  main.rs  parse.rs  tests.rs  validate.rs  virtual_machine.rs
src/flatten_tests/deeply_nested_calls/: 1.json
src/flatten_tests/division_by_zero/: 1.json  1.mg
src/flatten_tests/empty_expressions/: 1.json  1.mg  2.json  2.mg
src/flatten_tests/expression/: 1.json  1.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg  6.json  6.mg  7.json  7.mg  8.json  8.mg
src/flatten_tests/expression_with_high_precedence/: 1.json  1.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg  6.json  6.mg  7.json  7.mg  8.json  8.mg
src/flatten_tests/expression_with_identifier_chain_with_calls/: 1.json  1.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg  6.json  6.mg
src/flatten_tests/expression_with_identifier_chain_with_calls_with_arguments/: 1.json  1.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg
src/flatten_tests/expression_with_leading_zero_omitted/: 1.json  1.mg  10.json  10.mg  11.json  11.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg  6.json  6.mg  7.json  7.mg  8.json  8.mg  9.json  9.mg
src/flatten_tests/expression_with_multiple_arithmetic/: 1.json  1.mg  10.json  10.mg  11.json  11.mg  2.json  2.mg  3.json  3.mg  4.json  4.mg  5.json  5.mg  6.json  6.mg  7.json  (+5 more)
src/ls/: backend.rs
(+30 files in other folders)
