[package]
name = "mage-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = { version = "0.25.8" }
tree-sitter-mage = { version = "0.1.3" }
zydis = { version = "4.1.1", features = ["encoder", "serialization"] }
mmap-rs = { version = "0.6.1" }
hashbrown = { version = "0.15.4", features = ["nightly", "serde"] }
serde = { version = "1.0.219", features = [
    "alloc",
    "derive",
    "rc",
    "unstable",
] }
serde_json = { version = "1.0.141" }
clap = { version = "4.5.41", features = ["derive", "string"] }
tower-lsp-server = { version = "0.22.0", features = ["proposed"] }
tokio = { version = "1.46.1", features = ["full"] }
cranelift = "0.118.0"
cranelift-module = "0.118.0"
cranelift-jit = "0.118.0"
cranelift-native = "0.118.0"
